<resources>
    <string name="app_name">puzzles game</string>
    <string name="start_game">Start</string>
    <string name="settings_game">Settings</string>
    <string name="exit_game">Exit</string>
    <string name="developer_one">Developers: Bazarnov D.</string>
    <string name="developer_two">and Fokina E.</string>
    <string name="group">Group: A-08m-24</string>
    <string name="level">Volume level</string>
    <string name="theme">Theme</string>
    <string name="back">Back</string>
    <string name="select">Select difficulty</string>
    <string name="image">Image selection</string>
    <string name="next">Next</string>
    <string name="down">Down</string>
    <string name="menu">Menu</string>
    <string name="start">Start</string>
</resources>