<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/textmainset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="180dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/marmelad"
        android:text="@string/settings_game"
        android:textColor="#1A1818"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarvol"
        android:layout_width="248dp"
        android:layout_height="37dp"
        android:layout_marginTop="23dp"
        android:progressBackgroundTint="#5D2E2E"
        android:progressTint="#834949"
        android:thumbTint="#C56363"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="135dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/marmelad"
        android:foregroundGravity="center"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchtheme"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:buttonTintMode="add"
        android:fontFamily="@font/marmelad"
        android:text="@string/theme"
        android:textColor="#141313"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarvol"
        app:thumbTint="#C56565"
        app:thumbTintMode="src_atop"
        app:trackTint="#954D4D" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmainset"
        app:layout_constraintVertical_bias="0.074">

        <TextView
            android:id="@+id/textdev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/marmelad"
            android:gravity="center"
            android:text="@string/developer_one"
            android:textColor="#141212"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/marmelad"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:text="@string/developer_two" />

        <TextView
            android:id="@+id/textgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/marmelad"
            android:gravity="center"
            android:text="@string/group"
            android:textColor="#141212"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#AF6565"
        android:fontFamily="@font/marmelad"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>