<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagememu"
        android:layout_width="297sp"
        android:layout_height="268sp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="490dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/menu" />

    <LinearLayout
        android:id="@+id/menubutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagememu"
        app:layout_constraintVertical_bias="0.126">

        <Button
            android:id="@+id/buttonstart"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15sp"
            android:backgroundTint="#C76767"
            android:backgroundTintMode="add"
            android:fontFamily="@font/marmelad"
            android:text="@string/start_game"
            android:textSize="30sp"
            android:textStyle="bold"
            app:strokeColor="#AB524B"
            app:strokeWidth="4sp" />

        <Button
            android:id="@+id/buttonset"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15sp"
            android:backgroundTint="#C76767"
            android:backgroundTintMode="add"
            android:fontFamily="@font/marmelad"
            android:text="@string/settings_game"
            android:textSize="30sp"
            android:textStyle="bold"
            app:strokeColor="#AB524B"
            app:strokeWidth="4sp" />

        <Button
            android:id="@+id/buttonexit"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15sp"
            android:backgroundTint="#C76767"
            android:backgroundTintMode="add"
            android:fontFamily="@font/marmelad"
            android:text="@string/exit_game"
            android:textSize="30sp"
            android:textStyle="bold"
            app:strokeColor="#AB524B"
            app:strokeWidth="4sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>